Refactor account and card services to improve method naming and enhance functionality