@@ -1,17 +1,18 @@
 package BankApp.SpringBank.service.impl;
 
 import BankApp.SpringBank.dto.DepositRequestDto;
-import BankApp.SpringBank.dto.req.transaction.TransactionRequestDto;
+import BankApp.SpringBank.dto.req.transfer.TransferRequestDto;
 import BankApp.SpringBank.dto.res.transaction.TransactionResponseDto;
 import BankApp.SpringBank.mapper.TransactionMapper;
-import BankApp.SpringBank.model.Account;
-import BankApp.SpringBank.model.Enum.AccountStatus;
+import BankApp.SpringBank.model.Card;
 import BankApp.SpringBank.model.Enum.TransactionStatus;
 import BankApp.SpringBank.model.Enum.TransactionType;
 import BankApp.SpringBank.model.Transaction;
+import BankApp.SpringBank.model.User;
+import BankApp.SpringBank.repository.CardRepository;
 import BankApp.SpringBank.repository.TransactionRepository;
-import BankApp.SpringBank.service.AccountService;
 import BankApp.SpringBank.service.AuthService;
+import BankApp.SpringBank.service.CardService;
 import BankApp.SpringBank.service.TransactionService;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
@@ -19,86 +20,120 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class TransactionServiceImpl implements TransactionService {
 
     private final TransactionRepository repository;
-    private final AccountService accountService;
     private final TransactionMapper mapper;
     private final AuthService authService;
+    private final CardRepository cardRepository;
+    private final CardService cardService;
 
     @Override
     @Transactional
-    public TransactionResponseDto transfer(TransactionRequestDto dto) {
-        Account from = accountService.findById(dto.fromAccountId());
-        Account to = accountService.findById(dto.toAccountId());
+    public TransactionResponseDto transfer(TransferRequestDto dto) {
+        User user = authService.getCurrentUser();
 
-        if (from.getStatus() != AccountStatus.ACTIVE){
-            throw new RuntimeException("Source account is not active");
+        Card fromCard = cardService.findCardId(dto.fromCardId());
+        Card toCard = cardService.findCardId(dto.toCardId());
+
+        if (!fromCard.getAccount().getOwner().getId().equals(user.getId())){
+            throw new RuntimeException("The card does not belong to the current user");
         }
 
-        if (to.getStatus() != AccountStatus.ACTIVE){
-            throw new RuntimeException("Target account is not active");
+        validateCard(fromCard);
+        validateCard(toCard);
+
+        if (fromCard.getBalance().compareTo(dto.amount()) < 0) {
+            throw new RuntimeException("Insufficient funds on the card");
         }
 
-        if (from.getBalance().compareTo(dto.amount()) < 0){
-            throw new RuntimeException("Insufficient funds");
-        }
-
-        if (from.getCurrency() != to.getCurrency()){
-            throw new RuntimeException("Currency mismatch");
-        }
-
-        from.setBalance(from.getBalance().subtract(dto.amount()));
-        to.setBalance(to.getBalance().add(dto.amount()));
+        fromCard.setBalance(fromCard.getBalance().subtract(dto.amount()));
+        toCard.setBalance(toCard.getBalance().add(dto.amount()));
 
         Transaction transaction = Transaction.builder()
                 .amount(dto.amount())
                 .type(TransactionType.TRANSFER)
                 .status(TransactionStatus.SUCCESS)
                 .description(dto.description())
-                .referenceNumber(generateReference())
-                .fromAccount(from)
-                .toAccount(to)
+                .fromCard(fromCard)
+                .toCard(toCard)
                 .build();
+        Transaction saved = repository.save(transaction);
+        return mapper.toDto(saved);
 
-        Transaction save = repository.save(transaction);
-        return mapper.toDto(save);
     }
 
     @Override
     @Transactional
     public TransactionResponseDto deposit(DepositRequestDto dto) {
-        Account account = accountService.findById(dto.accountId());
+        User user = authService.getCurrentUser();
 
-        account.setBalance(account.getBalance().add(dto.amount()));
+        Card card = cardService.findCardId(dto.cardId());
+
+        if (!card.getAccount().getOwner().getId().equals(user.getId())){
+            throw new RuntimeException("The card does not belong to the current user");
+        }
+
+        validateCard(card);
+
+        card.setBalance(card.getBalance().add(dto.amount()));
 
         Transaction transaction = Transaction.builder()
                 .amount(dto.amount())
                 .type(TransactionType.DEPOSIT)
                 .status(TransactionStatus.SUCCESS)
-                .description("DEPOSIT")
-                .referenceNumber(generateReference())
-                .toAccount(account)
+                .toCard(card)
                 .build();
 
-        Transaction save = repository.save(transaction);
-        return mapper.toDto(save);
+        Transaction saved = repository.save(transaction);
+        return mapper.toDto(saved);
+
     }
 
     @Override
     @Transactional
-    public List<TransactionResponseDto> getMyTransactions() {
-        return repository.findAllByFromAccount_OwnerOrToAccount_Owner(
-                    authService.getCurrentUser(),
-                    authService.getCurrentUser()
-                )
+    public TransactionResponseDto withdraw(DepositRequestDto dto) {
+        Card card = cardService.findCardId(dto.cardId());
+        validateCard(card);
+
+        if (card.getBalance().compareTo(dto.amount()) < 0) {
+            throw new RuntimeException("Insufficient funds on the card");
+        }
+
+        card.setBalance(card.getBalance().subtract(dto.amount()));
+
+        Transaction transaction = Transaction.builder()
+                .amount(dto.amount())
+                .type(TransactionType.WITHDRAWAL)
+                .status(TransactionStatus.SUCCESS)
+                .fromCard(card)
+                .build();
+
+        Transaction saved = repository.save(transaction);
+
+        return mapper.toDto(saved);
+    }
+
+    @Override
+    public List<TransactionResponseDto> getHistory(UUID id) {
+        return repository.
+                findByFromCardIdOrToCardId(id, id)
                 .stream()
                 .map(mapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
+
+    }
+
+    private void validateCard(Card card) {
+        if (card.isBlocked()) {
+            throw new RuntimeException("Карта заблокирована: " + card.getId());
+        }
+        if (card.getAccount().isBlocked()) {
+            throw new RuntimeException("Аккаунт заблокирован: " + card.getAccount().getId());
+        }
     }
 
     private String generateReference() {
